--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html xmlns='http://www.w3.org/1999/xhtml' lang='ja' xml:lang='ja'>
+<head>
 <meta charset='utf-8'/>
 <title>真空.org</title>
+<link rel='icon' href='./assets/masora-icon.png'/>
 <link rel="stylesheet" crossorigin="anonymous" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;500&amp;family=Noto+Serif+JP:wght@300&amp;display=swap"/>
 <link rel="stylesheet" crossorigin="anonymous" href="https://code.cdn.mozilla.net/fonts/fira.css"/>
 <meta name='viewport' content='width=device-width, initial-scale=1'/>
@@ -118,6 +120,8 @@ nav ul {
 	column-gap: 25%;
 }
 </style>
+</head>
+<body>
 <div id='box'>
 	<h1 id='text'>真空.org</h1>
 	<div id='subheading'>xn--w1yo5e.org</div>
@@ -130,4 +134,5 @@ nav ul {
 	</nav>
 	<footer>&#169; 2022 真空. License: <a rel='license' href='https://creativecommons.org/licenses/by-sa/4.0/'>CC-BY-SA-4.0</a> or <a rel='license' href='https://www.gnu.org/licenses/'>GNU GPL version 3 or later</a>.</footer>
 </div>
+</body>
 </html>
