--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@ a {
     --font-serif-adjust: 0.446875;
     --font-weight-main: 300; /* light */
     --font-weight-bold: 500; /* medium */
+	background-image: url(./assets/masora-bg.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+	background-color: #677663;
 }
 ::selection {
     background-color: var(--menhera-brand-primary-color);
@@ -57,17 +62,13 @@ strong, tt, th, h1, h2, h3, h4, h5, h6 {
     font-weight: var(--font-weight-bold);
 }
 body {
-	background-color: #677663;
 	font-family: var(--font-sans);
 	flex: 1;
 	font-weight: 300;
 	display: flex;
 	margin: 0;
-	background-image: url(./assets/masora-bg.jpg);
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center center;
 	font-size-adjust: var(--font-sans-adjust);
+background-color: rgba(0, 0, 0, .25)
 }
 #box {
 	flex: 1;
