--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@ background-color: rgba(0, 0, 0, .25)
 	background-image: radial-gradient(circle farthest-side, #fff, #000);
 	flex-direction: column;
 	mix-blend-mode: screen;
-	row-gap: 2.5%;
+	row-gap: 1em;
+	padding-block-start: 5%;
+	padding-block-end: 5%;
 }
 #text {
-	font-size: 12.5vw;
+	font-size: 20vmin;
 	color: rgba(0, 0, 0, .5);
 	text-shadow: 0 0 .1em rgba(0, 0, 0, .5);
 	font-weight: 500;
@@ -89,15 +91,15 @@ background-color: rgba(0, 0, 0, .25)
 	margin: 0;
 }
 #subheading {
-	font-size: 1.5vw;
+	font-size: 5vmin;
 }
 #words {
-	font-size: 2.5vmin;
+	font-size: 5vmin;
 	color: #000;
 	writing-mode: vertical-rl;
 	font-family: var(--font-serif);
 	font-weight: 300;
-	height: 25%;
+	height: 10em;
 	padding: 0;
 	margin: 0;
 	font-size-adjust: var(--font-serif-adjust);
@@ -119,6 +121,11 @@ nav ul {
 	margin: 0;
 	padding: 0;
 	column-gap: 25%;
+}
+footer {
+	text-align: center;
+	padding-inline-start: 2em;
+	padding-inline-end: 2em;
 }
 </style>
 </head>
