--- a/index.html
+++ b/index.html
@@ -122,21 +122,22 @@
                 flex-direction: row;
                 justify-content: space-around;
                 column-gap: 1em;
+                align-items: baseline;
             }
 
             #websites ul > :not(:first-child) {
-                border-inline-start: solid 1px #cccccc;
+                border-inline-start: solid 1px #eeeeee;
                 padding-inline-start: 1em;
             }
 
             #websites ul a {
                 text-decoration: none;
-                color: #657241;
+                color: #c9e386;
             }
 
             #websites ul strong {
                 font-weight: bold;
-                color: #666666;
+                color: #ffffff;
             }
 
             #box {
@@ -150,6 +151,7 @@
                 row-gap: 1em;
                 padding-block-start: 5%;
                 padding-block-end: 5%;
+                border-radius: 1rem;
             }
 
             #text {
