--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
                 color: #6f6f6f;
                 padding-inline-start: 1em;
                 padding-inline-end: 1em;
-                font-family: monospace;
             }
 
             #banner-tld {
@@ -132,11 +131,11 @@
 
             #websites ul a {
                 text-decoration: none;
-                color: #c9e386;
+                color: #36420e;
             }
 
             #websites ul strong {
-                font-weight: bold;
+                font-weight: 500;
                 color: #ffffff;
             }
 
