--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 flex-direction: column;
                 margin: 0;
                 font-size-adjust: var(--font-sans-adjust);
-                background-color: rgba(0, 0, 0, .25)
+                background-color: rgba(0, 0, 0, .25);
+                padding-block-end: 5vmin;
             }
 
             #page-header {
@@ -149,10 +150,11 @@
                 flex-direction: column;
                 mix-blend-mode: screen;
                 row-gap: 1em;
-                padding-block-start: 5%;
-                padding-block-end: 5%;
+                padding: 5vmin;
                 border-radius: 1rem;
                 writing-mode: vertical-rl;
+                overflow: auto;
+                min-inline-size: 0;
             }
 
             #text {
@@ -229,7 +231,7 @@
                     <li><a href='https://github.com/metastable-void'>GitHub</a></li>
                 </ul>
             </nav>
-            <footer>&#169; 2023 真空. License: <a rel='license' href='https://creativecommons.org/licenses/by-sa/4.0/'>CC-BY-SA-4.0</a> or <a rel='license' href='https://www.gnu.org/licenses/'>GNU GPL version 3 or later</a>.</footer>
+            <footer>&#169; 2023 真空 / License: <a rel='license' href='https://creativecommons.org/licenses/by-sa/4.0/'>CC-BY-SA-4.0</a> or <a rel='license' href='https://www.gnu.org/licenses/'>GNU GPL version 3 or later</a>.</footer>
         </div>
     </body>
 </html>
