--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
                 writing-mode: vertical-rl;
                 overflow: auto;
                 min-inline-size: 0;
-                max-inline-size: 75vmin;
                 margin-block-start: 5vmin;
                 margin-block-end: 5vmin;
+                box-shadow: inset 0 0 1rem #000;
             }
 
             #text {
-                font-size: 20vmin;
+                font-size: 20vi;
                 color: rgba(0, 0, 0, .5);
                 text-shadow: 0 0 .1em rgba(0, 0, 0, .5);
                 font-weight: 500;
@@ -170,11 +170,11 @@
             }
 
             #subheading {
-                font-size: 5vmin;
+                font-size: 5vi;
             }
 
             #words {
-                font-size: 5vmin;
+                font-size: 5vi;
                 color: #000;
                 font-family: var(--font-serif);
                 font-weight: 300;
@@ -202,12 +202,6 @@
                 margin: 0;
                 padding: 0;
                 column-gap: 25%;
-            }
-
-            footer {
-                text-align: center;
-                padding-inline-start: 2em;
-                padding-inline-end: 2em;
             }
         </style>
     </head>
