--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 flex-direction: column;
                 margin: 0;
                 font-size-adjust: var(--font-sans-adjust);
-                background-color: rgba(0, 0, 0, .25);
+                background-color: rgba(0, 0, 0, .3333);
                 padding-block-end: 5vmin;
             }
 
@@ -149,14 +149,14 @@
                 background-image: radial-gradient(circle farthest-side, #fff, #666);
                 flex-direction: column;
                 mix-blend-mode: screen;
-                row-gap: 1em;
-                padding: 5vmin;
+                row-gap: 1rem;
+                padding: 5vi;
                 border-radius: 1rem;
                 writing-mode: vertical-rl;
                 overflow: auto;
                 min-inline-size: 0;
-                margin-block-start: 5vmin;
-                margin-block-end: 5vmin;
+                margin-block-start: 5vi;
+                margin-block-end: 5vi;
                 box-shadow: inset 0 0 1rem #000;
             }
 
