--- a/index.html
+++ b/index.html
@@ -169,10 +169,6 @@
                 margin: 0;
             }
 
-            #subheading {
-                font-size: 5vi;
-            }
-
             #words {
                 font-size: 5vi;
                 color: #000;
@@ -220,7 +216,6 @@
         </nav>
         <div id='box'>
             <h1 id='text'>真空</h1>
-            <div id='subheading'>xn--w1yo5e.org</div>
             <blockquote id='words'>🌕🌓してメンへらごっこしてお薬調べて遊んでた昔が懐かしい——あの頃は苦しかったけど楽しかった。全てはもうあたまが自由に働かなくなった精神の夜に溶けてしまうだろうから、わすれないでいようね。</blockquote>
             <nav>
                 <ul>
@@ -228,7 +223,10 @@
                     <li><a href='https://github.com/metastable-void'>GitHub</a></li>
                 </ul>
             </nav>
-            <footer>&#169; 2023 真空 / License: <a rel='license' href='https://creativecommons.org/licenses/by-sa/4.0/'>CC-BY-SA-4.0</a> or <a rel='license' href='https://www.gnu.org/licenses/'>GNU GPL version 3 or later</a>.</footer>
+            <footer>
+                <p>Permalink: https://xn--w1yo5e.org/</p>
+                <p>&#169; 2023 真空 / License: <a rel='license' href='https://creativecommons.org/licenses/by-sa/4.0/'>CC-BY-SA-4.0</a> or <a rel='license' href='https://www.gnu.org/licenses/'>GNU GPL version 3 or later</a>.</p>
+            </footer>
         </div>
     </body>
 </html>
