webkit emoji hack

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </nav>
         <div id='box'>
             <h1 id='text'>真空</h1>
-            <blockquote id='words'>🌕🌓してメンへらごっこしてお薬調べて遊んでた昔が懐かしい——あの頃は苦しかったけど楽しかった。全てはもうあたまが自由に働かなくなった精神の夜に溶けてしまうだろうから、わすれないでいようね。</blockquote>
+            <blockquote id='words'>🌕&#xfe0e;🌓&#xfe0e;してメンへらごっこしてお薬調べて遊んでた昔が懐かしい——あの頃は苦しかったけど楽しかった。全てはもうあたまが自由に働かなくなった精神の夜に溶けてしまうだろうから、わすれないでいようね。</blockquote>
             <nav>
                 <ul>
                     <li><a href='https://twitter.com/intent/user?user_id=847315328744865793'>Twitter</a></li>
