--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <style>
             /* fonts */
             @font-face {
-                font-family: 'Noto Emoji';
+                font-family: 'Apple Color Emoji'; /* hack; not actually Apple Color Emoji - not Apple nor Color */
                 src: url(./assets/NotoEmoji-Regular.ttf);
             }
 
@@ -39,8 +39,8 @@
                 min-width: 100%;
                 min-height: 100%;
                 --menhera-brand-primary-color: #5eaf30;
-                --font-sans: 'Fira Sans', 'Noto Sans JP', 'UniHentaiKana', 'Noto Emoji', 'Noto Sans Symbols2', system-ui, sans-serif;
-                --font-serif: 'Noto Serif JP', 'UniHentaiKana', 'Noto Emoji', 'Noto Sans Symbols2', serif;
+                --font-sans: 'Fira Sans', 'Noto Sans JP', 'UniHentaiKana', 'Apple Color Emoji', 'Noto Sans Symbols2', system-ui, sans-serif;
+                --font-serif: 'Noto Serif JP', 'UniHentaiKana', 'Apple Color Emoji', 'Noto Sans Symbols2', serif;
                 --font-sans-adjust: 0.529167;
                 --font-serif-adjust: 0.446875;
                 --font-weight-main: 300; /* light */
