apple dirty hack

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 min-width: 100%;
                 min-height: 100%;
                 --menhera-brand-primary-color: #5eaf30;
-                --font-sans: 'Fira Sans', 'Noto Sans JP', 'UniHentaiKana', 'Apple Color Emoji', 'Noto Sans Symbols2', system-ui, sans-serif;
-                --font-serif: 'Noto Serif JP', 'UniHentaiKana', 'Apple Color Emoji', 'Noto Sans Symbols2', serif;
+                --font-sans: 'Fira Sans', 'Noto Sans JP', 'UniHentaiKana', 'Apple Color Emoji', 'Noto Sans Symbols2', monospace;
+                --font-serif: 'Noto Serif JP', 'UniHentaiKana', 'Apple Color Emoji', 'Noto Sans Symbols2', monospace;
                 --font-sans-adjust: 0.529167;
                 --font-serif-adjust: 0.446875;
                 --font-weight-main: 300; /* light */
